--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,20 +72,22 @@ Inflector = "0.11"
 intrusive-collections = "0.9"
 inventory = "0.3"
 log = "0.4"
-miden-assembly = { version = "0.15.0", default-features = false }
-miden-core = { version = "0.15.0", default-features = false, features = [
-    "diagnostics",
-] }
+
+# Miden Dependencies
+miden-assembly = { version = "0.17.1", default-features = false }
+miden-core = { version = "0.17.1", default-features = false }
+miden-debug-types = { version = "0.17.1", default-features = false }
+miden-assembly-syntax = { version = "0.17.1", default-features = false }
 miden-formatting = { version = "0.1", default-features = false }
-miden-lib = { version = "0.10.0", default-features = false, features = [
+miden-lib = { version = "0.11.0", default-features = false, features = [
     "with-debug-info",
 ] }
-miden-objects = { version = "0.10.0", default-features = false }
-miden-processor = { version = "0.15.0", default-features = false }
-miden-stdlib = { version = "0.15.0", default-features = false, features = [
+miden-objects = { version = "0.11.0", default-features = false }
+miden-processor = { version = "0.17.1", default-features = false }
+miden-stdlib = { version = "0.17.1", default-features = false, features = [
     "with-debug-info",
 ] }
-miden-mast-package = { version = "0.15.0", default-features = false }
+miden-mast-package = { version = "0.17.1", default-features = false }
 miette = { package = "miden-miette", version = "7.1.1" }
 paste = "1.0"
 parking_lot = "0.12"
@@ -102,6 +104,7 @@ serde = { version = "1.0", default-features = false, features = [
     "alloc",
     "rc",
 ] }
+
 smallvec = { version = "1.14", default-features = false, features = [
     "union",
     "const_generics",
