fix: in `[dev-dependencies]` specify our crates with `path` only.
Since `release-plz` does not consider dev-dependencies when computing
the publish order the publishing will fail for a crate that has a
not-yet-published crate version in the dev-dependencies.

--- a/codegen/masm/Cargo.toml
+++ b/codegen/masm/Cargo.toml
@@ -37,6 +37,7 @@ smallvec.workspace = true
 thiserror.workspace = true
 
 [dev-dependencies]
-midenc-expect-test.workspace = true
+# Use local paths for dev-only dependency to avoid relying on crates.io during packaging
+midenc-expect-test = { path = "../../tools/expect-test" }
 proptest.workspace = true
 env_logger.workspace = true
