--- a/sdk/base-macros/Cargo.toml
+++ b/sdk/base-macros/Cargo.toml
@@ -23,4 +23,5 @@ toml.workspace = true
 syn.workspace = true
 
 [dev-dependencies]
+# Use local paths for dev-only dependency to avoid relying on crates.io during packaging
 miden-objects = { workspace = true, features = ["std"] }
