--- a/examples/auth-component-no-auth/Cargo.toml
+++ b/examples/auth-component-no-auth/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["cdylib"]
 [dependencies]
 # Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
 # and transaction kernel API for the Miden rollup
-miden = { path = "../../../../sdk/sdk" }
+miden = { path = "../../sdk/sdk" }
 wit-bindgen-rt = "0.28"
 
 [package.metadata.component]
@@ -23,7 +23,7 @@ package = "miden:auth-component-no-auth"
 project-kind = "authentication-component"
 
 [package.metadata.component.target.dependencies]
-"miden:base" = { path = "../../../../sdk/base/wit/miden.wit" }
+"miden:base" = { path = "../../sdk/base/wit/miden.wit" }
 
 [profile.release]
 trim-paths = ["diagnostics", "object"]
