--- a/sdk/base-macros/Cargo.toml
+++ b/sdk/base-macros/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "miden-base-macros"
 description = "Provides proc macro support for Miden rollup SDK"
-version.workspace = true
+version = "0.5.0"
 rust-version.workspace = true
 authors.workspace = true
 repository.workspace = true
