--- a/sdk/base-sys/Cargo.toml
+++ b/sdk/base-sys/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "miden-base-sys"
 description = "Miden rollup Rust bingings and MASM library"
-version.workspace = true
+version = "0.5.0"
 rust-version.workspace = true
 authors.workspace = true
 repository.workspace = true
@@ -16,7 +16,7 @@ build = "build.rs"
 links = "miden_base_sys_stubs"
 
 [dependencies]
-miden-stdlib-sys = { version = "0.4.1", path = "../stdlib-sys" }
+miden-stdlib-sys = { version = "0.5.0", path = "../stdlib-sys" }
 
 [features]
 default = []
