--- a/sdk/base/Cargo.toml
+++ b/sdk/base/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "miden-base"
 description = "Miden rollup Rust SDK"
-version.workspace = true
+version = "0.5.0"
 rust-version.workspace = true
 authors.workspace = true
 repository.workspace = true
@@ -12,9 +12,9 @@ readme.workspace = true
 edition.workspace = true
 
 [dependencies]
-miden-base-sys = { version = "0.4.1", path = "../base-sys" }
-miden-stdlib-sys = { version = "0.4.1", path = "../stdlib-sys" }
-miden-base-macros = { version = "0.4.1", path = "../base-macros" }
+miden-base-sys = { version = "0.5.0", path = "../base-sys" }
+miden-stdlib-sys = { version = "0.5.0", path = "../stdlib-sys" }
+miden-base-macros = { version = "0.5.0", path = "../base-macros" }
 
 [features]
 default = []
