--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,20 +73,20 @@ inventory = "0.3"
 log = "0.4"
 
 # Miden Dependencies
-miden-assembly = { version = "0.17.1", default-features = false }
-miden-core = { version = "0.17.1", default-features = false }
-miden-debug-types = { version = "0.17.1", default-features = false }
-miden-assembly-syntax = { version = "0.17.1", default-features = false }
+miden-assembly = { version = "0.18.0", default-features = false }
+miden-core = { version = "0.18.0", default-features = false }
+miden-debug-types = { version = "0.18.0", default-features = false }
+miden-assembly-syntax = { version = "0.18.0", default-features = false }
 miden-formatting = { version = "0.1", default-features = false }
 miden-lib = { version = "0.11.0", default-features = false, features = [
     "with-debug-info",
 ] }
 miden-objects = { version = "0.11.0", default-features = false }
-miden-processor = { version = "0.17.1", default-features = false }
-miden-stdlib = { version = "0.17.1", default-features = false, features = [
+miden-processor = { version = "0.18.0", default-features = false }
+miden-stdlib = { version = "0.18.0", default-features = false, features = [
     "with-debug-info",
 ] }
-miden-mast-package = { version = "0.17.1", default-features = false }
+miden-mast-package = { version = "0.18.0", default-features = false }
 miette = { package = "miden-miette", version = "7.1.1" }
 paste = "1.0"
 parking_lot = "0.12"
@@ -156,12 +156,19 @@ midenc-expect-test = { path = "tools/expect-test" }
 
 [patch.crates-io]
 #miden-assembly = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
+#miden-assembly = { path = "../miden-vm/assembly" }
+#miden-assembly-syntax = { path = "../miden-vm/assembly-syntax" }
 #miden-core = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
+#miden-core = { path = "../miden-vm/core" }
 #miden-client = { git = "https://github.com/0xMiden/miden-client", rev = "f98ae87fc3f77e269c3c1e412d1b8ac650aa6fe3" }
+#miden-debug-types = { path = "../miden-vm/crates/debug/types" }
 #miden-processor = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
+#miden-processor = { path = "../miden-vm/processor" }
 #miden-lib = { git = "https://github.com/0xMiden/miden-base", rev = "64ba4d0f8a077dd7d8f2643ebafa155f95b1c241" }
 #miden-stdlib = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
+#miden-stdlib = { path = "../miden-vm/stdlib" }
 #miden-mast-package = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
+#miden-mast-package = { path = "../miden-vm/package" }
 
 
 [profile.dev]
