--- a/examples/counter-note/Cargo.toml
+++ b/examples/counter-note/Cargo.toml
@@ -14,10 +14,6 @@ crate-type = ["cdylib"]
 # Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
 # and transaction kernel API for the Miden rollup
 miden = { path = "../../sdk/sdk" }
-wit-bindgen-rt = "0.28"
-
-
-
 
 [package.metadata.miden]
 project-kind = "note-script"
@@ -26,9 +22,9 @@ project-kind = "note-script"
 [package.metadata.miden.dependencies]
 "miden:counter-contract" = { path = "../counter-contract" }
 
-# TODO: switch to miden table
-[package.metadata.component]
-package = "miden:counter-note"
+# # TODO: switch to miden table
+# [package.metadata.component]
+# package = "miden:counter-note"
 
 [package.metadata.component.target.dependencies]
 "miden:base" = { path = "../../sdk/base/wit/miden.wit" }
