--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,7 +120,7 @@ syn = { version = "2.0", features = [
 ] }
 thiserror = { package = "miden-thiserror", version = "1.0" }
 toml = { version = "0.8", features = ["preserve_order"] }
-tokio = { version = "1.39.2", features = ["rt", "time", "macros"] }
+tokio = { version = "1.39.2", features = ["rt", "time", "macros", "rt-multi-thread"] }
 wat = "1.0.69"
 wasmparser = { version = "0.227", default-features = false, features = [
     "features",
