refactor: move cargo_publish_dry_run into a separate CI job

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -375,3 +375,12 @@ args = [
     "-D",
     "warnings",
 ]
+
+[tasks.publish-dry-run]
+category = "Test"
+description = "Simulate publishing to uncover any build errors when each crate folder is built in isolation"
+command = "cargo"
+args = [
+    "publish",
+    "--dry-run",
+]
