--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: CI
 
+permissions:
+  contents: read
+
 on:
   push:
     branches:
@@ -139,10 +142,6 @@ jobs:
         # unification and avoid surprises on publishing the crates.
         run: |
           cargo make check-each --release --all-features
-      - name: cargo publish dry run
-        # Simulate publishing to uncover any build errors when each crate folder is built in isolation
-        run: |
-          cargo publish --dry-run
 
   midenc_integration_tests:
     name: midenc integration tests
@@ -227,3 +226,30 @@ jobs:
       - name: Test
         run: |
           cargo make test -E 'package(miden-integration-node-tests)'
+
+  cargo_publish_dry_run:
+    name: cargo publish dry run
+    runs-on: ubuntu-latest
+    needs: [unit_tests]
+    steps:
+      - uses: actions/checkout@v5
+      - name: Install Rust
+        run: |
+          rustup update --no-self-update
+          rustc --version
+      - name: Cache Cargo
+        uses: Swatinem/rust-cache@v2
+        with:
+          # Use a common cache for the basic compilation/formatter/clippy checks
+          shared-key: ${{ github.workflow }}-shared
+          prefix-key: ${{ env.RUST_CACHE_KEY }}
+          save-if: ${{ github.ref == 'refs/heads/next' }}
+      - name: Install cargo-make
+        run: |
+          if ! cargo make --version 2>/dev/null; then
+            cargo install cargo-make --force
+          fi
+      - name: cargo publish dry run
+        # Simulate publishing to uncover any build errors when each crate folder is built in isolation
+        run: |
+          cargo make publish-dry-run
