--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -25,6 +25,7 @@ miden-mast-package.workspace = true
 miden-objects = { workspace = true, features = ["std"] }
 miden-processor.workspace = true
 midenc-dialect-arith.workspace = true
+midenc-dialect-cf.workspace = true
 midenc-dialect-hir.workspace = true
 midenc-frontend-wasm.workspace = true
 midenc-hir.workspace = true
