--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,21 +72,21 @@ inventory = "0.3"
 log = "0.4"
 
 # Miden Dependencies
-miden-assembly = { version = "0.18", default-features = false }
-miden-core = { version = "0.18", default-features = false }
+miden-assembly = { version = "0.19", default-features = false }
+miden-core = { version = "0.19", default-features = false }
 miden-debug = { version = "0.4.1" }
-miden-debug-types = { version = "0.18", default-features = false }
-miden-assembly-syntax = { version = "0.18", default-features = false }
+miden-debug-types = { version = "0.19", default-features = false }
+miden-assembly-syntax = { version = "0.19", default-features = false }
 miden-formatting = { version = "0.1", default-features = false }
 miden-lib = { version = "0.12", default-features = false, features = [
     "with-debug-info",
 ] }
 miden-objects = { version = "0.12", default-features = false }
-miden-processor = { version = "0.18", default-features = false }
-miden-stdlib = { version = "0.18", default-features = false, features = [
+miden-processor = { version = "0.19", default-features = false }
+miden-stdlib = { version = "0.19", default-features = false, features = [
     "with-debug-info",
 ] }
-miden-mast-package = { version = "0.18", default-features = false }
+miden-mast-package = { version = "0.19", default-features = false }
 miette = { package = "miden-miette", version = "7.1.1" }
 paste = "1.0"
 parking_lot = "0.12"
@@ -159,13 +159,13 @@ midenc-expect-test = { path = "tools/expect-test" }
 #miden-assembly-syntax = { path = "../miden-vm/assembly-syntax" }
 #miden-core = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
 #miden-core = { path = "../miden-vm/core" }
-miden-client = { git = "https://github.com/0xMiden/miden-client", rev = "4099516c08c9a56c6d1271fddfc798f40da0d702" }
-miden-debug = { path = "../miden-debug" }
+#miden-client = { git = "https://github.com/0xMiden/miden-client", rev = "4099516c08c9a56c6d1271fddfc798f40da0d702" }
+miden-debug = { git = "https://github.com/0xMiden/miden-debug", rev = "0cfdc623f51c721ff7812a0f70836ffaea182898" }
 #miden-debug-types = { path = "../miden-vm/crates/debug/types" }
 #miden-processor = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
 #miden-processor = { path = "../miden-vm/processor" }
-miden-lib = { git = "https://github.com/0xMiden/miden-base", rev = "8a50c8f98529f9a78655385e3e78a6de44db9316" }
-miden-objects = { git = "https://github.com/0xMiden/miden-base", rev = "8a50c8f98529f9a78655385e3e78a6de44db9316" }
+#miden-lib = { git = "https://github.com/0xMiden/miden-base", rev = "8a50c8f98529f9a78655385e3e78a6de44db9316" }
+#miden-objects = { git = "https://github.com/0xMiden/miden-base", rev = "8a50c8f98529f9a78655385e3e78a6de44db9316" }
 #miden-stdlib = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
 #miden-stdlib = { path = "../miden-vm/stdlib" }
 #miden-mast-package = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
