--- a/tools/cargo-miden/Cargo.toml
+++ b/tools/cargo-miden/Cargo.toml
@@ -29,7 +29,7 @@ log.workspace = true
 clap.workspace = true
 anyhow.workspace = true
 cargo_metadata = "0.19"
-cargo-generate = "0.23"
+cargo-generate = { git = "https://github.com/0xMiden/cargo-generate", rev = "397e1cac6dbd7420d47bdaf2b6da4c3a508cea3f" }
 path-absolutize = "3.1.1"
 serde.workspace = true
 serde_json = "1.0"
